--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -3,7 +3,7 @@ name = "client"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-inquire = "0.6.1"
+crossterm = "0.26.1"
+# inquire = "0.6.1"
+tui = "0.19.0"
