--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 # figment = { version = "0.10.8", features = ["toml"] }
 # rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
 rocket = "0.5.0-rc.3"
+serde = { version = "1.0.160", features = ["derive"] }
